--- a/css/base.css
+++ b/css/base.css
@@ -17,12 +17,39 @@
     box-sizing: border-box;
 }
 
+.columns {
+    width: 100%;
+    float: left;
+    box-sizing: border-box;
+}
+
 /* tablets and desktop */
 @media (min-width: 550px) {
     .container {
         width: 84%;
     }
 }
+
+.columns {
+    margin-left: 4%;
+}
+
+.columns:first-child {
+    margin-left: 0;
+}
+
+.one.columns    { width: 4.66666666667%; }
+.two.columns    { width: 13.3333333333%; }
+.three.columns  { width: 22%;            }
+.four.columns   { width: 30.6666666667%; }
+.five.columns   { width: 39.3333333333%; }
+.six.columns    { width: 48%;            }
+.seven.columns  { width: 56.6666666667%; }
+.eight.columns  { width: 65.3333333333%; }
+.nine.columns   { width: 74.0%;          }
+.ten.columns    { width: 82.6666666667%; }
+.eleven.columns { width: 91.3333333333%; }
+.twelve.columns { width: 100%;           }
 
 /* clearing
 ============================================================================ */
@@ -49,7 +76,6 @@
     --gray-soft: hsl(0deg 0% 80%);
     --text-color: hsl(0deg 0% 16%);
     --text-color-hover: hsl(175deg, 100%, 32%);
-    --blue: #8CC0DE;
 }
 
 body { 
@@ -59,9 +85,6 @@ body {
 
 a       { color: var(--text-color); }
 a:hover { color: var(--text-color-hover); }
-
-.red    { color: hsl(350, 88%, 46%); }
-.blue   { color: hsl(216, 88%, 46%); }
 
 /* typography
 ============================================================================ */
@@ -122,18 +145,12 @@ a {
 /* miscellaneous
 ============================================================================ */
 
-canvas {
-    margin-bottom: 1.5rem;
-}
-
-img {
-    object-fit: contain;
-    width: 100%;
-    height: 100%;
-}
-
 .navbar {
     border-top: 1px solid var(--gray-soft);
     border-bottom: 1px solid var(--gray-soft);
     padding: 1rem;
+}
+
+.navbar a {
+    margin: 0 1rem;
 }
