rock protection chart 1.0.0

--- a/css/base.css
+++ b/css/base.css
@@ -1,4 +1,4 @@
-/* cg.css v0.1.0
+/* base.css v0.1.0
  * copyright 2025, grant freeman
  * license gpl-3.0
 =============================================================================*/
